Fix wrapping and colors in song info modal

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -39,11 +39,6 @@ img
   width: 100%
   object-fit: cover
 
-ul
-  background-color: var(--tertiary) !important
-  color: var(--textPrimary) !important
-  border-radius: 8px !important
-
 .dropdown-item
   color: var(--textPrimary) !important
 
